Addressing flex issues on IE11.

--- a/assets/sass/animations.sass
+++ b/assets/sass/animations.sass
@@ -7,7 +7,6 @@
 	span.letter
 		display: inline-block
 		transform: rotate3d(0, 1, 0, 90deg)
-		backface-visibility: hidden
 		transition-duration: 200ms
 
 		&.revealed
