--- a/assets/sass/mixins.sass
+++ b/assets/sass/mixins.sass
@@ -81,7 +81,6 @@
 			border-bottom: 6px solid $link-hover
 
 =cardRotateState($state: 'before', $deg-before: -90deg, $deg-after: 0deg)
-	backface-visibility: hidden
 
 	@if $state == before
 		opacity: 0
